Index pages for owner and vets

--- a/pet-clinic-web/src/main/resources/messages/messages_pl.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_pl.properties
@@ -1,4 +1,8 @@
 welcome=Witam
+owners=Właściciele
+name=Imię
+lastName=Nazwisko
+vets=Weteryniarze
 required=jest wymagany
 notFound=nie może zostać znaleziony
 duplicate=obecnie jest zajęty
