Data without jpa challange complete, added error page

--- a/pet-clinic-web/src/main/resources/messages/messages.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages.properties
@@ -1,8 +1,13 @@
 welcome=Welcome
+owners=Owners
+name=First name
+lastName=Last name
+vets=Veterinarians
+oups = Error
 required=is required
 notFound=has not been found
 duplicate=is already in use
 nonNumeric=must be all numeric
-duplicateFormSubmission=Duplicate form submission is not allowed
+duplicateFormSubmission=Duplicate form sub mission is not allowed
 typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
