--- a/pet-clinic-web/src/main/resources/messages/messages_pl.properties
+++ b/pet-clinic-web/src/main/resources/messages/messages_pl.properties
@@ -3,6 +3,7 @@ owners=Właściciele
 name=Imię
 lastName=Nazwisko
 vets=Weteryniarze
+oups = Błąd
 required=jest wymagany
 notFound=nie może zostać znaleziony
 duplicate=obecnie jest zajęty
